--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="yellow_1">#D1C083</color>
     <color name="yellow_2">#ffc808</color>
     <color name="yellow_3">#ffc809</color>
+    <color name="menu_background">#D1C083</color> <!-- Color de fondo del menú -->
+    <color name="menu_item_text">#FFFFFF</color>   <!-- Color del texto de los ítems -->
 </resources>
