--- a/app/src/main/res/layout/activity_catalogo.xml
+++ b/app/src/main/res/layout/activity_catalogo.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -7,7 +8,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/fondo1"
     android:textAlignment="center"
-    tools:context=".MainActivity">
+    tools:context=".CatalogoActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -71,11 +72,13 @@
 
                         <ImageView
                             android:id="@+id/image3"
-                            android:layout_width="21dp"
-                            android:layout_height="18dp"
-                            app:layout_constraintEnd_toEndOf="@id/image2"
-                            app:layout_constraintTop_toTopOf="@id/image2"
-                            app:srcCompat="@drawable/red_circle" />
+                            android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        app:layout_constraintEnd_toEndOf="@id/image2"
+                        app:layout_constraintTop_toTopOf="@id/image2"
+                        app:layout_constraintHorizontal_bias="0.9"
+                        app:layout_constraintVertical_bias="0.1"
+                        app:srcCompat="@drawable/red_circle" />
 
                         <TextView
                             android:id="@+id/textview5"
@@ -83,11 +86,14 @@
                             android:layout_height="wrap_content"
                             android:text="1"
                             android:textColor="@color/white"
-                            android:textSize="15sp"
+                            android:textSize="10sp"
+                            android:gravity="center"
                             app:layout_constraintBottom_toBottomOf="@id/image3"
                             app:layout_constraintEnd_toEndOf="@id/image3"
                             app:layout_constraintStart_toStartOf="@id/image3"
-                            app:layout_constraintTop_toTopOf="@id/image3" />
+                            app:layout_constraintTop_toTopOf="@id/image3"
+                            android:padding="2dp"/> <!-- Ajustar tamaño de texto y padding -->
+
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <EditText
@@ -236,157 +242,157 @@
             </LinearLayout>
         </ScrollView>
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="12dp"
-            android:layout_marginBottom="24dp"
-            app:layout_constraintBottom_toBottomOf="@+id/scrollView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            android:layout_height="match_parent">
 
-            <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/bottomNavigationView"
-                android:layout_width="386dp"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom"
-                android:background="@drawable/colm">
+            <!-- Contenido principal de la pantalla -->
+            <LinearLayout
+                android:id="@+id/contentLayout"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                android:padding="16dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
 
-                <LinearLayout
+                <!-- Ejemplo de contenido -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Contenido de la aplicación"
+                    android:padding="16dp" />
+
+                <!-- Otros elementos -->
+
+            </LinearLayout>
+
+            <!-- Bottom Navigation View siempre en la parte inferior -->
+            <androidx.coordinatorlayout.widget.CoordinatorLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginEnd="12dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <com.google.android.material.bottomnavigation.BottomNavigationView
+                    android:id="@+id/bottomNavigationView"
                     android:layout_width="match_parent"
-                    android:layout_height="79dp"
-                    android:layout_gravity="center_vertical"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/colm"
+                    app:itemIconTint="@color/white"
+                    app:itemTextColor="@color/white">
 
                     <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
-                        <ImageView
-                            android:id="@+id/image0"
-                            android:layout_width="22dp"
-                            android:layout_height="22dp"
-                            android:layout_gravity="center"
-                            android:src="@drawable/btn_1" />
+                        <LinearLayout
+                            android:id="@+id/Explorar"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/text0"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Explorar"
-                            android:textAlignment="center"
-                            android:textColor="@color/white"
-                            android:textSize="10sp"
-                            android:layout_marginTop="5dp"/>
+                            <ImageView
+                                android:id="@+id/image0"
+                                android:layout_width="22dp"
+                                android:layout_height="22dp"
+                                android:src="@drawable/btn_1" />
+
+                            <TextView
+                                android:id="@+id/text0"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Explorar"
+                                android:textAlignment="center"
+                                android:textColor="@color/white"
+                                android:textSize="10sp"
+                                android:layout_marginTop="5dp"/>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:id="@+id/Carrito"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/image1"
+                                android:layout_width="22dp"
+                                android:layout_height="22dp"
+                                android:src="@drawable/btn_2" />
+
+                            <TextView
+                                android:id="@+id/text1"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Carrito"
+                                android:textAlignment="center"
+                                android:textColor="@color/white"
+                                android:textSize="10sp"
+                                android:layout_marginTop="5dp"/>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:id="@+id/Perfil"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/image8"
+                                android:layout_width="22dp"
+                                android:layout_height="22dp"
+                                android:src="@drawable/btn_5" />
+
+                            <TextView
+                                android:id="@+id/tex3"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Perfil"
+                                android:textAlignment="center"
+                                android:textColor="@color/white"
+                                android:textSize="10sp"
+                                android:layout_marginTop="5dp"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:id="@+id/Menu"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/imagenn"
+                                android:layout_width="22dp"
+                                android:layout_height="22dp"
+                                android:src="@drawable/btn_4" />
+
+                            <TextView
+                                android:id="@+id/texw"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Menu"
+                                android:textAlignment="center"
+                                android:textColor="@color/white"
+                                android:textSize="10sp"
+                                android:layout_marginTop="5dp"/>
+                        </LinearLayout>
                     </LinearLayout>
 
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/image1"
-                            android:layout_width="22dp"
-                            android:layout_height="23dp"
-                            android:layout_gravity="center"
-                            android:src="@drawable/btn_2" />
-
-                        <TextView
-                            android:id="@+id/text1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Carrito"
-                            android:textAlignment="center"
-                            android:textColor="@color/white"
-                            android:textSize="10sp"
-                            android:layout_marginTop="5dp"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/image7"
-                            android:layout_width="22dp"
-                            android:layout_height="22dp"
-                            android:layout_gravity="center"
-                            android:src="@drawable/btn_3" />
-
-                        <TextView
-                            android:id="@+id/text2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Explorar"
-                            android:textAlignment="center"
-                            android:textColor="@color/white"
-                            android:textSize="10sp"
-                            android:layout_marginTop="5dp"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/image8"
-                            android:layout_width="22dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:src="@drawable/btn_4" />
-
-                        <TextView
-                            android:id="@+id/tex3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Explorar"
-                            android:textAlignment="center"
-                            android:textColor="@color/white"
-                            android:textSize="10sp"
-                            android:layout_marginTop="5dp"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/image4"
-                            android:layout_width="22dp"
-                            android:layout_height="22dp"
-                            android:layout_gravity="center"
-                            android:src="@drawable/btn_5" />
-
-                        <TextView
-                            android:id="@+id/text4"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Explorar"
-                            android:textAlignment="center"
-                            android:textColor="@color/white"
-                            android:textSize="10sp"
-                            android:layout_marginTop="5dp"/>
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </com.google.android.material.bottomnavigation.BottomNavigationView>
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+                </com.google.android.material.bottomnavigation.BottomNavigationView>
+            </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
