--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,8 +7,7 @@
     tools:context=".LoginActivity"
     android:background="@drawable/fondo1">
 
-    <!--    Your application icon-->
-
+    <!-- Your application icon -->
     <com.google.android.material.imageview.ShapeableImageView
         android:layout_width="250dp"
         android:layout_height="200dp"
@@ -20,31 +19,34 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.051" />
 
+    <!-- Email and Password Input Fields -->
     <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="153dp"
+        android:id="@+id/emailPasswordLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.399"
-        tools:layout_editor_absoluteX="2dp">
+        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintHorizontal_bias="0.5">
 
-        <!--        Email Input Field-->
+        <!-- Email Input Field -->
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="10dp"
             android:hint="@string/email"
             app:boxStrokeColor="@color/black"
-
             app:startIconTint="@color/black">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/emailLogin"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:inputType="text"
                 android:maxLength="40"
                 android:singleLine="true"
@@ -52,22 +54,20 @@
                 android:textStyle="bold" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <!--        Password Input Field-->
+        <!-- Password Input Field -->
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="20dp"
             android:hint="@string/password"
             app:boxStrokeColor="@color/black"
-
             app:startIconTint="@color/black">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/passwordLogin"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:maxLength="40"
                 android:singleLine="true"
@@ -75,9 +75,22 @@
                 android:textStyle="bold" />
         </com.google.android.material.textfield.TextInputLayout>
 
-
+        <!-- Forgot Password TextView -->
+        <TextView
+            android:id="@+id/forgotPasswordTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="end"
+            android:text="@string/Olvide_mi_contra"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:paddingEnd="16dp"/>
     </LinearLayout>
 
+    <!-- Don't have an account and Register TextViews -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -110,7 +123,7 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-    <!--    Login To Existing Account Button-->
+    <!-- Login Button -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/loginBtn"
         android:layout_width="wrap_content"
@@ -121,6 +134,5 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.6"
         android:text="@string/login"/>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
