--- a/app/src/main/res/layout/activity_regitro_admin.xml
+++ b/app/src/main/res/layout/activity_regitro_admin.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity"
+    tools:context=".RegitroAdminActivity"
     android:background="@drawable/fondo1">
 
-    <!--    Your application icon-->
-
+    <!-- Your application icon -->
     <com.google.android.material.imageview.ShapeableImageView
         android:layout_width="250dp"
         android:layout_height="200dp"
@@ -19,16 +18,40 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.061" />
 
+    <!-- Create a New Account Button -->
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="399dp"
+        android:layout_height="289dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.411"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintVertical_bias="0.595"
+        tools:layout_editor_absoluteX="6dp"
+        tools:ignore="MissingConstraints">
 
-        <!--        Email Input Field-->
+        <!-- Name Input Field -->
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="10dp"
+            android:hint="Nombre"
+            app:boxStrokeColor="@color/black"
+            app:startIconTint="@color/black">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/nombreRegister"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inputType="text"
+                android:maxLength="40"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!-- Email Input Field -->
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
@@ -37,7 +60,6 @@
             android:layout_marginTop="10dp"
             android:hint="@string/email"
             app:boxStrokeColor="@color/black"
-
             app:startIconTint="@color/black">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -47,11 +69,11 @@
                 android:inputType="text"
                 android:maxLength="40"
                 android:singleLine="true"
-                android:textStyle="bold"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                android:textStyle="bold" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <!--        Password Input Field-->
+        <!-- Password Input Field -->
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
@@ -60,7 +82,6 @@
             android:layout_marginTop="20dp"
             android:hint="@string/password"
             app:boxStrokeColor="@color/black"
-
             app:startIconTint="@color/black">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -70,66 +91,22 @@
                 android:inputType="textPassword"
                 android:maxLength="40"
                 android:singleLine="true"
-                android:textStyle="bold"
-                android:textColor="@color/black"/>
-
+                android:textColor="@color/black"
+                android:textStyle="bold" />
         </com.google.android.material.textfield.TextInputLayout>
 
-
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.7"
-            android:gravity="end|center_vertical"
-            android:paddingHorizontal="10dp"
-            android:text="@string/already_have_account"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/loginTV"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.3"
-            android:gravity="center_vertical"
-            android:text="@string/login"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <!--    Create a New Account Button-->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/createAccountBtn"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
+        android:text="@string/create_account"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.6"
-        android:text="@string/create_account"/>
-
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/googleBtn"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.888" />
+        app:layout_constraintVertical_bias="0.852" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
