--- a/app/src/main/res/layout/activity_perfil_admin.xml
+++ b/app/src/main/res/layout/activity_perfil_admin.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -17,9 +18,10 @@
         android:orientation="vertical"
         android:paddingStart="24dp"
         android:paddingEnd="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0">
 
         <TextView
             android:id="@+id/tituloadmin"
@@ -51,13 +53,11 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
         android:src="@drawable/logo_abeja"
         android:contentDescription="Imagen de perfil"
         app:layout_constraintTop_toBottomOf="@id/headerLayout1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Detalles del administrador -->
     <LinearLayout
@@ -68,8 +68,7 @@
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@id/profileImage"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5">
+        app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
             android:id="@+id/adminName"
@@ -105,14 +104,15 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <Button
-            android:id="@+id/btnEditProfile"
+            android:id="@+id/btnEditAdmin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:text="Editar Perfil"
-            android:textColor="@color/white"
             android:background="@color/black"
             android:padding="16dp"
+            android:layout_gravity="center"
+            android:text="Registro de Administrador"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -125,6 +125,7 @@
             android:textColor="@color/white"
             android:background="@color/black"
             android:padding="16dp"
+            android:layout_gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -134,6 +135,7 @@
             android:layout_height="wrap_content"
             android:background="@color/black"
             android:padding="16dp"
+            android:layout_gravity="center"
             android:text="Cerrar Sesión"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
