--- a/app/src/main/res/layout/activity_regitro_admin.xml
+++ b/app/src/main/res/layout/activity_regitro_admin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegitroAdminActivity"
+    tools:context=".RegistroAdminActivity"
     android:background="@drawable/fondo1">
 
     <!-- Your application icon -->
@@ -19,15 +19,16 @@
         app:layout_constraintVertical_bias="0.061" />
 
     <!-- Create a New Account Button -->
+
     <LinearLayout
-        android:layout_width="399dp"
-        android:layout_height="289dp"
+        android:layout_width="386dp"
+        android:layout_height="254dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.595"
-        tools:layout_editor_absoluteX="6dp"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintVertical_bias="0.551"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="9dp">
 
         <!-- Name Input Field -->
         <com.google.android.material.textfield.TextInputLayout
