--- a/app/src/main/res/layout/activity_registro_product.xml
+++ b/app/src/main/res/layout/activity_registro_product.xml
@@ -30,13 +30,14 @@
             android:layout_height="1dp"
             android:layout_alignParentBottom="true"/>
 
+        <!-- Imagen del toolbar -->
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imageAgregarP"
-            android:layout_width="60dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="17dp"
-            android:background="@drawable/agregar" />
+            android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/agregar" />
     </RelativeLayout>
 
     <!-- Contenedor Principal -->
@@ -45,30 +46,25 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar"
         android:layout_above="@id/btnAgregar"
-        android:padding="16dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/agregar">
-
+        android:padding="16dp">
 
         <!-- RecyclerView -->
-
-        <!-- Nombres del producto -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/RT_ImagenProduct"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/imageAgregarP"
             android:layout_marginTop="12dp"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="4"
             tools:listitem="@layout/item_imagen_selecciona" />
 
+        <!-- Nombres del producto -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/TIL_Nombres"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/RT_ImagenProduct"
-            android:layout_marginTop="8dp"> <!-- Reducido el margen superior -->
+            android:layout_marginTop="8dp">
 
             <EditText
                 android:id="@+id/etNombres"
@@ -84,7 +80,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/TIL_Nombres"
-            android:layout_marginTop="8dp"> <!-- Reducido el margen superior -->
+            android:layout_marginTop="8dp">
 
             <EditText
                 android:id="@+id/etPrecio"
@@ -100,7 +96,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/TIL_Precio"
-            android:layout_marginTop="8dp"> <!-- Reducido el margen superior -->
+            android:layout_marginTop="8dp">
 
             <EditText
                 android:id="@+id/etDescripcion"
@@ -115,7 +111,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/TIL_Descripcion"
-            android:layout_marginTop="8dp"> <!-- Reducido el margen superior -->
+            android:layout_marginTop="8dp">
 
             <EditText
                 android:id="@+id/etCantidad"
@@ -136,6 +132,5 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp" />
-
 
 </RelativeLayout>
