--- a/app/src/main/res/menu/popup.xml
+++ b/app/src/main/res/menu/popup.xml
@@ -7,5 +7,8 @@
     <item
         android:id="@+id/menu_Cuenta"
         android:title="Cuenta"/>
+    <item
+        android:id="@+id/menu_Lista"
+        android:title="Lista de Productos"/>
 
 </menu>
